# ZKek

./: .gitignore  README.md  compile.sh  package-lock.json  proof.json  prove.sh  public.json  snarkjs_steps.txt  verification_key.json  zkek.circom  zkek.r1cs  zkek_0001.zkey  zkek_0003.zkey
anchor/zkek/: Anchor.toml  README.md  txtx.yml
anchor/zkek/programs/zkek/: Cargo.toml
anchor/zkek/programs/zkek/src/: constants.rs  error.rs  groth16_utils.rs  lib.rs
anchor/zkek/programs/zkek/src/instructions/: deposit.rs  initialize.rs  mod.rs  update_fee.rs  withdraw.rs
anchor/zkek/programs/zkek/src/state/: global_state.rs  merkle_tree.rs  mod.rs  nullifier.rs
anchor/zkek/tests/: zkek.ts
backend/: .env.example  README.md  codama.json  docker-compose.yaml  package-lock.json  package.json  tsconfig.json
backend/scripts/: populateDb.ts
backend/src/: index.ts
backend/src/common/: config.ts  db.ts
backend/src/controllers/: merkleTree.ts
backend/src/migrations/: 1769375544396_init-schema.js
backend/src/repositories/: merkleTree.ts
backend/src/routes/: merkleTree.ts
backend/src/services/: merkleTree.ts
backend/src/types/: merkleTree.ts
circom/: README.md
circom/circuits/: deposit.circom  withdraw.circom  zkek.circom  zkeklib.circom
circom/inputs/: deposit.json  inputs.json  inputs_new.json  main.js  package-lock.json  proof_converter.js  public_inputs_converter.js  withdraw.json
circom/scripts/: compile.sh  prove.sh  setup.sh  verify.sh
help/hash/: input.json  main.js  package.json
programs/zkek/: package-lock.json
zkek_js/: zkek.wasm
(+5 files in other folders)
